# src/main/java/guru/springframework/juniemvc/entities/Customer.java
@@ -1,0 +1,48 @@
+package guru.springframework.juniemvc.entities;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.OneToMany;
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.util.HashSet;
+import java.util.Set;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@Entity
+public class Customer extends BaseEntity {
+
+    @NotNull
+    private String name;
+
+    private String email;
+
+    private String phoneNumber;
+
+    @NotNull
+    private String addressLine1;
+
+    private String addressLine2;
+
+    @NotNull
+    private String city;
+
+    @NotNull
+    private String state;
+
+    @NotNull
+    private String postalCode;
+
+    @Builder.Default
+    @OneToMany(mappedBy = "customer")
+    private Set<BeerOrder> beerOrders = new HashSet<>();
+
+}
